--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="John Doe - Full Stack Developer & UI/UX Designer Portfolio" />
-    <title>John Doe | Full Stack Developer</title>
+    <meta name="description" content="Praveen Mariappasamy - Full Stack Developer Portfolio" />
+    <title>Praveen Mariappasamy | Full Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
